--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 .vscode/settings.json
 target/*
 target/.rustc_info.json
+log/requests.log
+Cargo.lock
+target/debug/robustmq
+target/debug/examples/example-4ba1f37f8d60f7de.d
+target/debug/incremental/example-vb1bvk89m5lh/s-go5kf6uny9-odgmrx.lock
+target/debug/incremental/example-vb1bvk89m5lh/s-go5kf6uny9-odgmrx-working/dep-graph.part.bin
