--- a/config/log4rs.yml
+++ b/config/log4rs.yml
@@ -4,16 +4,41 @@ appenders:
     kind: console
     encoder:
       pattern: "{d} [{t}] {h({l})} {M}:{m}{n}"
-  champion:
+  requests:
     kind: file
     path: "log/requests.log"
     encoder:
-      pattern: "{d} - {m}{n}"
+      pattern: "{d} [{t}] {h({l})} {M}: {m}{n}"
+  foo:
+  #限制日志文件大小的配置
+    kind: rolling_file
+    path: "log/foo.{}.log"
+    policy:
+      trigger:
+        kind: size
+        limit: 1024
+      roller:
+        kind: delete
+  bar:
+  #限制日志文件数量的配置
+    kind: rolling_file
+    path: "log/foo.{}.log"
+    policy:
+      kind: compound
+      trigger:
+        kind: size
+        limit: 200
+      roller:
+        kind: fixed_window
+        pattern: 'log/foo.{}.log'
+        base: 0
+        count: 5
+
 root:
   level: debug
   appenders:
     - stdout
-    - champion
+    - bar
 loggers:
   app::backend::db:
     level: info
