--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 
 [dependencies]
 log = "0.4.0"
-env_logger = "0.9"
+env_logger = "0.10.0"
 log4rs = "1.2.0"
+serde = "1.0"
+serde_yaml = "0.9"
+indoc = "2.0"
+serde_derive = "1.0"
