--- a/src/cmd/Cargo.toml
+++ b/src/cmd/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "robustmq"
-version = "0.0.1"
+name = "robustmq-cmd"
+version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
