--- a/.gitignore
+++ b/.gitignore
@@ -116,3 +116,39 @@ target/debug/incremental/test-3sm37klr7iff0/s-gplh2bzyfi-124da9u.lock
 target/debug/incremental/test-3sm37klr7iff0/s-gplh2bzyfi-124da9u-4a3dt6c2o34q56wfex4pmuo2s/dep-graph.bin
 target/debug/incremental/test-3sm37klr7iff0/s-gplh2bzyfi-124da9u-4a3dt6c2o34q56wfex4pmuo2s/query-cache.bin
 target/debug/incremental/test-3sm37klr7iff0/s-gplh2bzyfi-124da9u-4a3dt6c2o34q56wfex4pmuo2s/work-products.bin
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5.lock
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/2h6iyxjxg0inannv.o
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/2y1vh3rjltqspiz9.o
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/3r7s7xlsut5n4b3f.o
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/5a82gz3azcdidbjg.o
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/15ebz0dbsfm72nrj.o
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/208mblv0y3l2togb.o
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/dep-graph.bin
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/query-cache.bin
+target/debug/incremental/robustmq-2mm5aj878phkn/s-gplmkdb4nc-rk8tf5-15xk1859y7loyfvy181hjeky1/work-products.bin
+target/release/.cargo-lock
+target/release/robustmq
+target/release/robustmq.d
+target/release/.fingerprint/robustmq-0074fc6e4dbe0e91/bin-robustmq
+target/release/.fingerprint/robustmq-0074fc6e4dbe0e91/bin-robustmq.json
+target/release/.fingerprint/robustmq-0074fc6e4dbe0e91/dep-bin-robustmq
+target/release/.fingerprint/robustmq-0074fc6e4dbe0e91/invoked.timestamp
+target/release/deps/robustmq-0074fc6e4dbe0e91
+target/release/deps/robustmq-0074fc6e4dbe0e91.d
+src/cmd/target/release/.cargo-lock
+src/cmd/target/release/robustmq-cmd
+src/cmd/target/release/robustmq-cmd.d
+src/cmd/target/release/.fingerprint/robustmq-cmd-3b5bf95f208ba5b6/bin-robustmq-cmd
+src/cmd/target/release/.fingerprint/robustmq-cmd-3b5bf95f208ba5b6/bin-robustmq-cmd.json
+src/cmd/target/release/.fingerprint/robustmq-cmd-3b5bf95f208ba5b6/dep-bin-robustmq-cmd
+src/cmd/target/release/.fingerprint/robustmq-cmd-3b5bf95f208ba5b6/invoked.timestamp
+src/cmd/target/release/deps/robustmq_cmd-3b5bf95f208ba5b6
+src/cmd/target/release/deps/robustmq_cmd-3b5bf95f208ba5b6.d
+.vscode/configurationCache.log
+.vscode/targets.log
+.vscode/dryrun.log
+build/robustmq-v0.0.1-release.tar.gz
+build/robustmq-v0.0.1-release/bin/robust-server
+build/robustmq-v0.0.1-release/config/server.toml
+build/robustmq-v0.0.1-release/libs/robustmq
+build/robustmq-v0.0.1-release/libs/robustmq-cmd
