update toml file

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ target/debug/examples/example-4ba1f37f8d60f7de.d
 target/debug/incremental/example-vb1bvk89m5lh/s-go5kf6uny9-odgmrx.lock
 target/debug/incremental/example-vb1bvk89m5lh/s-go5kf6uny9-odgmrx-working/dep-graph.part.bin
 Cargo.lock
+Cargo.lock
+Cargo.lock
