--- a/config/log4rs.yml.template
+++ b/config/log4rs.yml.template
@@ -4,37 +4,20 @@ appenders:
     kind: console
     encoder:
       pattern: "{d} [{t}] {h({l})} {M}:{m}{n}"
-  requests:
-    kind: file
-    path: "log/requests.log"
-    encoder:
-      pattern: "{d} [{t}] {h({l})} {M}: {m}{n}"
   server:
-  #限制日志文件大小的配置
     kind: rolling_file
-    path: "log/server.{}.log"
-    encoder:
-      pattern: "{d} [{t}] {h({l})} {M}: {m}{n}"
-    policy:
-      trigger:
-        kind: size
-        limit: 1024
-      roller:
-        kind: delete
-  bar:
-  #限制日志文件数量的配置
-    kind: rolling_file
-    path: "log/server.{}.log"
+    path: "log/server.log"
+    append: true
     encoder:
       pattern: "{d} [{t}] {h({l})} {M}: {m}{n}"
     policy:
       kind: compound
       trigger:
         kind: size
-        limit: 5
+        limit: 1024mb
       roller:
         kind: fixed_window
-        pattern: 'log/foo.{}.log'
+        pattern: 'log/server.{}.log'
         base: 0
         count: 50
 
@@ -42,12 +25,11 @@ root:
   level: debug
   appenders:
     - stdout
-    - bar
+    - server
+    
 loggers:
-  app::backend::db:
-    level: info
-  app::requests:
+  app::server:
     level: info
     appenders:
-      - requests
+      - server
     additive: false
