--- a/src/config/Cargo.toml
+++ b/src/config/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "robustmq"
-version = "0.0.1"
+name = "config"
+version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,5 +14,4 @@ serde_yaml = "0.9"
 indoc = "2.0"
 serde_derive = "1.0"
 toml ="0.8.2"
-rlog = { path = "src/rlog", version = "0.1.0" }
-config = { path = "src/config", version = "0.1.0" }
+rlog = { path = "../rlog", version = "0.1.0" }
