--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,7 @@ serde_yaml = "0.9"
 indoc = "2.0"
 serde_derive = "1.0"
 toml ="0.8.2"
+
 rlog = { path = "src/rlog", version = "0.1.0" }
 config = { path = "src/config", version = "0.1.0" }
+metrics = { path = "src/metrics", version = "0.1.0" }
