--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ serde_yaml = "0.9"
 indoc = "2.0"
 serde_derive = "1.0"
 toml ="0.8.2"
+signal-hook = "0.3.17"
+tokio = "1.33.0"
 
 rlog = { path = "src/rlog", version = "0.1.0" }
 config = { path = "src/config", version = "0.1.0" }
