--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ rlog = { path = "src/rlog", version = "0.1.0" }
 config = { path = "src/config", version = "0.1.0" }
 metrics = { path = "src/metrics", version = "0.1.0" }
 admin = { path = "src/admin", version = "0.1.0" }
+meta = { path = "src/meta", version = "0.1.0" }
 
 [profile.release]
 panic = 'abort'
