--- a/src/admin/Cargo.toml
+++ b/src/admin/Cargo.toml
@@ -10,3 +10,5 @@ serde = "1.0"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.9", features = ["codec"] }
 axum="0.6.16"
+
+metrics = { path = "../metrics", version = "0.1.0" }
