--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,13 @@ signal-hook = "0.3.17"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.9", features = ["codec"] }
 axum="0.6.16"
+prometheus = "0.13.3"
+prometheus_exporter = "0.8"
+lazy_static = "^1.4"
 
-rlog = { path = "src/rlog", version = "0.1.0" }
-config = { path = "src/config", version = "0.1.0" }
-metrics = { path = "src/metrics", version = "0.1.0" }
-admin = { path = "src/admin", version = "0.1.0" }
-meta = { path = "src/meta", version = "0.1.0" }
+[[bin]]
+name = "robustmq-server"
+path = "src/server.rs"
 
 [profile.release]
 panic = 'abort'
