--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ axum="0.6.16"
 prometheus = "0.13.3"
 prometheus_exporter = "0.8"
 lazy_static = "^1.4"
+futures = "0.3"
 
 [[bin]]
 name = "robustmq-server"
