--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ prometheus = "0.13.3"
 prometheus_exporter = "0.8"
 lazy_static = "^1.4"
 futures = "0.3"
+bytes = "1"
 
 [[bin]]
 name = "robustmq-server"
