--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,9 @@ prometheus = "0.13.3"
 prometheus_exporter = "0.8"
 lazy_static = "^1.4"
 futures = "0.3"
+serde_json = "1"
+thiserror = "1" #错误定义和处理
+
 
 [[bin]]
 name = "robustmq-server"
