--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,17 +9,22 @@ edition = "2021"
 log = "0.4.0"
 env_logger = "0.10.0"
 log4rs = "1.2.0"
-serde = "1.0"
-toml ="0.8.2"
+serde = {version="1.0",features = [ "derive" ]}
+toml = "0.8.2"
 signal-hook = "0.3.17"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.9", features = ["codec"] }
-axum="0.6.16"
+axum = "0.6.16"
 prometheus = "0.13.3"
 prometheus_exporter = "0.8"
 lazy_static = "^1.4"
 futures = "0.3"
 bytes = "1"
+grpc = "~0.8"
+protobuf = "2.23"
+rocksdb = "0.21.0"
+clap = {version="4.4.7",features = [ "derive" ]}
+serde_json = "1.0"
 
 [[bin]]
 name = "robustmq-server"
