--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ prost = "0.12"
 prost-types = "0.12"
 prost-build = { version = "0.12" }
 tonic-build = "0.10.2"
+raft = "0.7.0"
 
 [[bin]]
 name = "robustmq-server"
