--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,11 @@ prost-types = "0.12"
 prost-build = { version = "0.12" }
 tonic-build = "0.10.2"
 raft = { version = "0.7.0" }
+slog = "2.2"
+slog-async = "2.3.0"
+slog-envlogger = { version = "2.1.0", optional = true }
+slog-stdlog = { version = "4", optional = true }
+slog-term = { version = "2.4.0"}
 
 [[bin]]
 name = "robustmq-server"
