--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "protocol"
-version = "0.0.1"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
+license.workspace = true
+
 
 [dependencies]
