Directory structure is introduced into workspace

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ members = [
     "src/common/metrics",
     "src/common/version",
     "src/meta",
-    "src/peotocol"
+    "src/protocol"
 ]
+resolver = "2"
 
 [workspace.package]
 version = "0.0.1"
@@ -17,11 +18,8 @@ edition = "2021"
 license = "Apache-2.0"
 
 [workspace.dependencies]
-log = "0.4.0"
-env_logger = "0.10.0"
-log4rs = "1.2.0"
 serde = {version="1.0",features = [ "derive" ]}
-toml = "0.8.2"
+serde_json = "1.0"
 signal-hook = "0.3.17"
 tokio = { version = "1", features = ["full"] }
 tokio-util = { version = "0.7.9", features = ["codec"] }
@@ -34,8 +32,6 @@ thiserror = "1" #错误定义和处理
 bytes = { version = "1", features = ["serde"] }
 protobuf = "2.23"
 rocksdb = "0.21.0"
-clap = {version="4.4.7",features = [ "derive" ]}
-serde_json = "1.0"
 tonic = "0.10.2"
 prost = "0.12"
 prost-types = "0.12"
@@ -47,8 +43,8 @@ ntex-util = "0.3.2"
 ntex-mqtt = "0.12.7"
 slog = "2.2"
 slog-async = "2.3.0"
-slog-envlogger = { version = "2.1.0", optional = true }
-slog-stdlog = { version = "4", optional = true }
+slog-envlogger = { version = "2.1.0"}
+slog-stdlog = { version = "4"}
 slog-term = { version = "2.4.0"}
 
 ## workspaces members
@@ -64,4 +60,4 @@ protocol={path="src/protocol"}
 
 [profile.release]
 panic = 'abort'
-debut = true
+debug = true
