--- a/src/admin/Cargo.toml
+++ b/src/admin/Cargo.toml
@@ -5,3 +5,12 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+thiserror.workspace = true
+axum.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+
+common-config.workspace = true
+common-log.workspace = true
+tokio.workspace = true
+
