--- a/src/common/config/Cargo.toml
+++ b/src/common/config/Cargo.toml
@@ -5,3 +5,7 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+toml = "0.8.2"
+common-log.workspace=true
+serde.workspace=true
+serde_json.workspace=true
