--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "common-runtime"
+name = "common-base"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 
 [dependencies]
 tokio.workspace=true
+lazy_static.workspace =true
+prometheus.workspace =true
