--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -10,3 +10,4 @@ thiserror.workspace = true
 bytes.workspace = true
 protocol.workspace = true
 common-base.workspace = true
+flume.workspace = true
