--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -11,3 +11,5 @@ bytes.workspace = true
 protocol.workspace = true
 common-base.workspace = true
 flume.workspace = true
+tokio-util.workspace = true
+futures.workspace =true
