mqtt4 protocol read/write

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,6 +57,7 @@ common-metrics={path="src/common/metrics"}
 common-version={path="src/common/version"}
 meta={path="src/meta"}
 protocol={path="src/protocol"}
+robustmq-test={path="tests"}
 
 [profile.release]
 panic = 'abort'
