--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 [dependencies]
 tokio.workspace = true
+axum.workspace = true
 thiserror.workspace = true
 bytes.workspace = true
 protocol.workspace = true
@@ -15,3 +16,4 @@ tokio-util.workspace = true
 futures.workspace =true
 common-version.workspace =true
 common-log.workspace = true
+serde_json.workspace = true
