--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -10,10 +10,8 @@ axum.workspace = true
 thiserror.workspace = true
 bytes.workspace = true
 protocol.workspace = true
-common-base.workspace = true
+common.workspace = true
 flume.workspace = true
 tokio-util.workspace = true
 futures.workspace =true
-common-version.workspace =true
-common-log.workspace = true
 serde_json.workspace = true
