--- a/src/meta/Cargo.toml
+++ b/src/meta/Cargo.toml
@@ -9,8 +9,7 @@ tokio.workspace = true
 tonic.workspace = true
 prost.workspace = true
 protobuf.workspace = true
-common-config.workspace = true
-common-log.workspace = true
+common.workspace = true
 tonic-build.workspace = true
 thiserror.workspace = true
 raft.workspace = true
