--- a/src/meta/Cargo.toml
+++ b/src/meta/Cargo.toml
@@ -19,3 +19,4 @@ rocksdb.workspace = true
 serde_json.workspace = true
 protocol.workspace =true
 futures.workspace =true
+raft-proto.workspace = true
