--- a/config/meta.toml
+++ b/config/meta.toml
@@ -2,7 +2,7 @@ node_id = 1
 addr = "127.0.0.1"
 port = 1228
 runtime_work_threads = 3
-data_path = "/Users/bytedance/robustmq_data"
+data_path = "/tmp/data"
 meta_nodes = ["127.0.0.1:1228"]
 
 [rocksdb]
