--- a/config/log4rs.yml
+++ b/config/log4rs.yml
@@ -3,13 +3,13 @@ appenders:
   stdout:
     kind: console
     encoder:
-      pattern: "{d} [{t}] {h({l})} {M}:{m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S)} {h({l})} {m}{n}"
   server:
     kind: rolling_file
     path: "log/server.log"
     append: true
     encoder:
-      pattern: "{d} [{t}] {h({l})} {M}: {m}{n}"
+      pattern: "{d(%Y-%m-%d %H:%M:%S)} {h({l})} {m}{n}"
     policy:
       kind: compound
       trigger:
