--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,16 +29,14 @@ lazy_static = "^1.4"
 futures = "0.3"
 thiserror = "1" #错误定义和处理
 bytes = { version = "1", features = ["serde"] }
-protobuf = "3.3.0"
+flume = "0.11.0"
+
 rocksdb = "0.21.0"
 tonic = "0.10.2"
-prost = "0.12"
-prost-types = "0.12"
-prost-build = { version = "0.12" }
-tonic-build = "0.10.2"
-raft = { version = "0.7.0" }
-flume = "0.11.0"
-raft-proto = "0.7.0"
+raft-proto ={version = "0.7.0"}
+raft = { package = "raft", version = "0.7", features = [
+    "prost-codec",
+], default-features = false }
 
 ## workspaces members
 bridge={path="src/bridge"}
