--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -9,6 +9,5 @@ license.workspace = true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
-tonic-build.workspace = true
-prost.workspace = true
 tonic.workspace =true
+prost = { version = "0.12.3", default-features = false, features = ["prost-derive"] }
