--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -10,4 +10,4 @@ bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
 tonic.workspace =true
-prost = { version = "0.12.3", default-features = false, features = ["prost-derive"] }
+prost = { version = "0.12.3"}
