--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ tonic = "0.10.2"
 
 prost = "0.12.3"
 raft = { package = "raft", version = "0.7", features = [
-    "prost-codec",
+    "prost-codec","bytes"
 ], default-features = false }
 
 ## workspaces members
