--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ flume = "0.11.0"
 futures-util = "0.3.30"
 rocksdb = "0.21.0"
 tonic = "0.10.2"
-
+bincode = "1.3.3"
 prost = "0.12.3"
 raft = { package = "raft", version = "0.7", features = [
     "prost-codec","bytes"
