--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,8 @@ futures-util = "0.3.30"
 rocksdb = "0.21.0"
 tonic = "0.10.2"
 bincode = "1.3.3"
-prost = "0.12.3"
 raft = { package = "raft", version = "0.7", features = [
-    "prost-codec","bytes"
+    "prost-codec"
 ], default-features = false }
 
 ## workspaces members
@@ -48,6 +47,10 @@ storage = { path = "src/storage" }
 meta = { path = "src/meta" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
+
+prost = { version = "0.12.3", default-features = false, features = ["prost-derive"] }
+# Only necessary if using Protobuf well-known types:
+prost-types = { version = "0.12.3", default-features = false }
 
 [profile.release]
 panic = 'abort'
