--- a/src/meta/Cargo.toml
+++ b/src/meta/Cargo.toml
@@ -21,6 +21,7 @@ bytes.workspace = true
 lazy_static.workspace = true
 raft.workspace = true
 prost.workspace = true
+prost-types.workspace = true
 bincode.workspace = true
 slog = "2"
 slog-term = "2.9.0"
