--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -11,3 +11,7 @@ axum.workspace = true
 thiserror.workspace = true
 tonic.workspace =true
 prost = { version = "0.12.3"}
+tonic-build = "0.10.2"
+
+[build-dependencies]
+prost-build = "0.12.3"
