--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,9 @@ flume = "0.11.0"
 futures-util = "0.3.30"
 rocksdb = "0.21.0"
 tonic = "0.10.2"
+tonic-build = "0.10.2"
 bincode = "1.3.3"
+prost = "0.12.3"
 raft = { package = "raft", version = "0.7", features = [
     "prost-codec"
 ], default-features = false }
@@ -47,10 +49,6 @@ storage = { path = "src/storage" }
 meta = { path = "src/meta" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
-
-prost = { version = "0.12.3", default-features = false, features = ["prost-derive"] }
-# Only necessary if using Protobuf well-known types:
-prost-types = { version = "0.12.3", default-features = false }
 
 [profile.release]
 panic = 'abort'
