--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -9,9 +9,6 @@ license.workspace = true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
-tonic.workspace =true
-prost = { version = "0.12.3"}
-tonic-build = "0.10.2"
-
-[build-dependencies]
-prost-build = "0.12.3"
+tonic.workspace = true
+prost.workspace = true
+tonic-build.workspace = true
