--- a/src/meta/Cargo.toml
+++ b/src/meta/Cargo.toml
@@ -17,13 +17,10 @@ futures.workspace = true
 futures-util.workspace = true
 bytes.workspace = true
 lazy_static.workspace = true
-prost.workspace = true
 bincode.workspace = true
 
-raft = { version = "0.7", default-features = false }
-raft-proto = { version = "0.7.0", features = [
-    "prost-codec"
-], default-features = false }
+raft = { version = "0.7",features = ["prost-codec"], default-features = false }
+prost = "0.11"
 
 slog = "2"
 slog-term = "2.9.0"
