--- a/config/meta.toml
+++ b/config/meta.toml
@@ -3,6 +3,7 @@ addr = "127.0.0.1"
 port = 1228
 runtime_work_threads = 3
 data_path = "/tmp/data"
+log_path = "/tmp/logs"
 meta_nodes = ["127.0.0.1:1228"]
 
 [rocksdb]
