--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,7 @@ tonic = "0.10.2"
 tonic-build = "0.10.2"
 bincode = "1.3.3"
 prost = "0.12.3"
+ahash = "0.8.7"
 
 ## workspaces members
 bridge = { path = "src/bridge" }
