--- a/src/meta/Cargo.toml
+++ b/src/meta/Cargo.toml
@@ -18,6 +18,7 @@ futures-util.workspace = true
 bytes.workspace = true
 lazy_static.workspace = true
 bincode.workspace = true
+ahash.workspace = true
 
 raft = { version = "0.7",features = ["prost-codec"], default-features = false }
 prost = "0.11"
