--- a/src/meta/Cargo.toml
+++ b/src/meta/Cargo.toml
@@ -19,6 +19,7 @@ bytes.workspace = true
 lazy_static.workspace = true
 bincode.workspace = true
 ahash.workspace = true
+byteorder.workspace = true
 
 raft = { version = "0.7",features = ["prost-codec"], default-features = false }
 prost = "0.11"
