--- a/config/meta.toml
+++ b/config/meta.toml
@@ -1,6 +1,7 @@
 node_id = 1
 addr = "127.0.0.1"
 port = 1228
+admin_port = 1227
 meta_nodes = ["127.0.0.1:1228"]
 runtime_work_threads = 3
 data_path = "/tmp/data"
