--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -8,8 +8,12 @@ license.workspace = true
 tokio.workspace=true
 lazy_static.workspace =true
 prometheus.workspace =true
-toml = "0.8.8"
+thiserror.workspace = true
+axum.workspace =true
 serde.workspace =true
+serde_json.workspace =true
+
+toml = "0.8.8"
 log = "0.4.0"
 env_logger = "0.10.0"
 log4rs = "1.2.0"
