--- a/src/meta/Cargo.toml
+++ b/src/meta/Cargo.toml
@@ -21,7 +21,7 @@ bincode.workspace = true
 ahash.workspace = true
 byteorder.workspace = true
 axum.workspace =true
-
+toml.workspace =true
 raft = { version = "0.7",features = ["prost-codec"], default-features = false }
 prost = "0.11"
 
