--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,7 @@ bincode = "1.3.3"
 prost = "0.12.3"
 ahash = "0.8.7"
 byteorder = "1.5.0"
+toml = "0.8.8"
 
 ## workspaces members
 bridge = { path = "src/bridge" }
