--- a/config/meta.toml
+++ b/config/meta.toml
@@ -2,7 +2,7 @@ node_id = 1
 addr = "127.0.0.1"
 port = 1228
 admin_port = 1227
-meta_nodes = ["127.0.0.1:1228"]
+nodes = { 1 = "127.0.0.1:1228" }
 runtime_work_threads = 100
 data_path = "/tmp/robust/data"
 log_path = "/tmp/robust/logs"
