--- a/src/common/Cargo.toml
+++ b/src/common/Cargo.toml
@@ -12,8 +12,7 @@ thiserror.workspace = true
 axum.workspace =true
 serde.workspace =true
 serde_json.workspace =true
-
-toml = "0.8.8"
+toml.workspace = true
 log = "0.4.0"
 env_logger = "0.10.0"
 log4rs = "1.2.0"
