--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -12,3 +12,5 @@ thiserror.workspace = true
 tonic.workspace = true
 prost.workspace = true
 tonic-build.workspace = true
+tokio-util.workspace = true
+bincode.workspace =true
