--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -13,4 +13,6 @@ tonic.workspace = true
 prost.workspace = true
 tonic-build.workspace = true
 tokio-util.workspace = true
-bincode.workspace =true
+bincode.workspace = true
+tokio.workspace = true
+futures.workspace = true
