--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 members = [
     "src/mqtt-bridge",
     "src/mqtt-broker",
+    "src/meta-server",
     "src/cmd",
     "src/common",
-    "src/meta",
     "src/protocol",
     "src/storage",
 ]
@@ -43,9 +43,9 @@ toml = "0.8.8"
 ## workspaces members
 mqtt-bridge = { path = "src/mqtt-bridge" }
 mqtt-broker = { path = "src/mqtt-broker" }
+meta-server = { path = "src/meta-server" }
 cmd = { path = "src/cmd" }
 common = { path = "src/common" }
 storage = { path = "src/storage" }
-meta = { path = "src/meta" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
