--- a/src/storage-engine/Cargo.toml
+++ b/src/storage-engine/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "storage-server"
+name = "storage-engine"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
