placement center init

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
     "src/mqtt-bridge",
     "src/mqtt-broker",
-    "src/meta-server",
+    "src/placement-center",
     "src/cmd",
     "src/common",
     "src/protocol",
@@ -44,7 +44,7 @@ toml = "0.8.8"
 ## workspaces members
 mqtt-bridge = { path = "src/mqtt-bridge" }
 mqtt-broker = { path = "src/mqtt-broker" }
-meta-server = { path = "src/meta-server" }
+placement-center = { path = "src/placement-center" }
 storage-engine = { path = "src/storage-engine" }
 storage-adapter = { path = "src/storage-adapter" }
 cmd = { path = "src/cmd" }
