--- a/src/storage-remote/Cargo.toml
+++ b/src/storage-remote/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "storage-object"
+name = "storage-remote"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
