--- a/src/storage-engine/Cargo.toml
+++ b/src/storage-engine/Cargo.toml
@@ -6,6 +6,7 @@ license.workspace = true
 
 
 [dependencies]
+common.workspace =true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
