--- a/config/storage-engine.toml
+++ b/config/storage-engine.toml
@@ -1,6 +1,7 @@
 node_id = 1
 addr = "127.0.0.1"
 port = 1228
+admin_port = 1229
 nodes = { 1 = "127.0.0.1:1228" }
 runtime_work_threads = 100
 data_path = "/tmp/robust/storage/data,/tmp/robust/storage/data,/tmp/robust/storage/data,/tmp/robust/storage/data,/tmp/robust/storage/data"
