--- a/src/placement-center/Cargo.toml
+++ b/src/placement-center/Cargo.toml
@@ -22,9 +22,11 @@ ahash.workspace = true
 byteorder.workspace = true
 axum.workspace = true
 toml.workspace = true
-raft = { version = "0.7", features = ["prost-codec"], default-features = false }
-# raft = { git = "https://github.com/robustmq/raft-rs", features = ["prost-codec"], default-features = false }
-prost = "0.11"
+# raft = { version = "0.7", features = ["prost-codec"], default-features = false }
+#prost = "0.11"
+# raft = { path = "/Users/bytedance/Desktop/code/robustmq-project/raft-rs",  features = ["prost-codec"], default-features = false }
+raft = { git = "https://github.com/robustmq/raft-rs",  features = ["prost-codec"], default-features = false }
+prost = "0.12.3"
 
 slog = "2"
 slog-term = "2.9.0"
