--- a/config/placement-center.toml
+++ b/config/placement-center.toml
@@ -9,5 +9,8 @@ log_path = "/tmp/robust5/logs"
 log_segment_size = 1099511627776
 log_file_num=50
 
+heartbeat = 10000
+
 [rocksdb]
 max_open_files = 10000
+
