--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,7 +48,7 @@ uuid = "1.7.0"
 mqtt-bridge = { path = "src/mqtt-bridge" }
 mqtt-broker = { path = "src/mqtt-broker" }
 placement-center = { path = "src/placement-center" }
-clients = { path = "centers" }
+clients = { path = "src/clients" }
 storage-engine = { path = "src/storage-engine" }
 storage-adapter = { path = "src/storage-adapter" }
 storage-object = { path = "src/storage-remote" }
