--- a/config/storage-engine.toml
+++ b/config/storage-engine.toml
@@ -1,8 +1,8 @@
 cluster_name = "StorageEngine1"
 node_id = 1
 addr = "127.0.0.1"
-port = 1228
-admin_port = 1229
+grpc_port = 1228
+prometheus_port = 1229
 nodes = { 1 = "127.0.0.1:1228" }
 runtime_work_threads = 100
 placement_center = ["127.0.0.1:8741","127.0.0.1:8741","127.0.0.1:8741"]
