--- a/config/placement-center.toml
+++ b/config/placement-center.toml
@@ -1,11 +1,11 @@
 node_id = 1
 addr = "127.0.0.1"
-port = 1228
-admin_port = 1227
+grpc_port = 1228
+http_port = 1227
 nodes = { 1 = "127.0.0.1:1228" }
 runtime_work_threads = 100
-data_path = "/tmp/robust5/data"
-log_path = "/tmp/robust5/logs"
+data_path = "/tmp/placement-center/data"
+log_path = "/tmp/placement-center/logs"
 log_segment_size = 1099511627776
 log_file_num=50
 
