--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ ahash = "0.8.7"
 byteorder = "1.5.0"
 toml = "0.8.8"
 uuid = "1.7.0"
+mobc = "0.8.3"
 
 ## workspaces members
 mqtt-bridge = { path = "src/mqtt-bridge" }
