--- a/config/cluster/placement-center/node-1.toml
+++ b/config/cluster/placement-center/node-1.toml
@@ -1,7 +1,7 @@
 node_id = 1
 addr = "127.0.0.1"
-port = 1228
-admin_port = 1227
+grpc_port = 1228
+http_port = 1227
 nodes = { 1 = "127.0.0.1:1228", 2 = "127.0.0.1:2228", 3 = "127.0.0.1:3228" }
 runtime_work_threads = 100
 data_path = "/tmp/robust1/data"
