--- a/config/cluster/placement-center/node-3.toml
+++ b/config/cluster/placement-center/node-3.toml
@@ -1,13 +1,13 @@
 node_id = 3
 addr = "127.0.0.1"
-port = 3228
-admin_port = 3227
+grpc_port = 3228
+http_port = 3227
 nodes = { 1 = "127.0.0.1:1228", 2 = "127.0.0.1:2228", 3 = "127.0.0.1:3228" }
 runtime_work_threads = 100
 data_path = "/tmp/robust3/data"
 log_path = "/tmp/robust3/logs"
 log_segment_size = 1099511627776
-log_file_num=50
+log_file_num = 50
 
 [rocksdb]
 max_open_files = 10000
