--- a/config/storage-engine.toml
+++ b/config/storage-engine.toml
@@ -1,13 +1,13 @@
 cluster_name = "StorageEngine1"
 node_id = 1
 addr = "127.0.0.1"
-grpc_port = 1228
-prometheus_port = 1229
-nodes = { 1 = "127.0.0.1:1228" }
+grpc_port = 2228
+prometheus_port = 2229
+nodes = { 1 = "127.0.0.1:2228" }
 runtime_work_threads = 100
-placement_center = ["127.0.0.1:8741","127.0.0.1:8741","127.0.0.1:8741"]
-data_path = "/tmp/robust/storage/data,/tmp/robust/storage/data,/tmp/robust/storage/data,/tmp/robust/storage/data,/tmp/robust/storage/data"
-log_path = "/tmp/robust/storage/logs"
+placement_center = ["127.0.0.1:1228"]
+data_path = ["/tmp/storage-engine/storage/data1","/tmp/storage-engine/storage/data2"]
+log_path = "/tmp/storage-engine/storage/logs"
 log_segment_size = 1099511627776
 log_file_num = 50
 
