--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ prost = "0.12.3"
 ahash = "0.8.7"
 byteorder = "1.5.0"
 toml = "0.8.8"
-uuid = "1.7.0"
+uuid = {version = "1.7.0",features = ["v4"]}
 mobc = "0.8.3"
 
 ## workspaces members
