--- a/config/placement-center.toml
+++ b/config/placement-center.toml
@@ -7,10 +7,9 @@ runtime_work_threads = 100
 data_path = "/tmp/placement-center/data"
 log_path = "/tmp/placement-center/logs"
 log_segment_size = 1099511627776
-log_file_num=50
-
-heartbeat = 10000
+log_file_num = 50
+heartbeat_timeout_ms = 30000
+heartbeat_check_time_ms = 1000
 
 [rocksdb]
 max_open_files = 10000
-
