--- a/config/cluster/placement-center/node-1.toml
+++ b/config/cluster/placement-center/node-1.toml
@@ -8,6 +8,8 @@ data_path = "/tmp/robust1/data"
 log_path = "/tmp/robust1/logs"
 log_segment_size = 1099511627776
 log_file_num = 50
+heartbeat_timeout_ms = 30000
+heartbeat_check_time_ms = 1000
 
 [rocksdb]
 max_open_files = 1000
