--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 members = [
-    "src/mqtt-bridge",
+    "src/mqtt-bridge/kafka",
+    "src/mqtt-bridge/elasticsearch",
+    "src/mqtt-bridge/redis",
     "src/mqtt-broker",
     "src/placement-center",
     "src/clients",
@@ -44,9 +46,12 @@ byteorder = "1.5.0"
 toml = "0.8.8"
 uuid = {version = "1.7.0",features = ["v4"]}
 mobc = "0.8.3"
+dashmap = "5.5.3"
 
 ## workspaces members
-mqtt-bridge = { path = "src/mqtt-bridge" }
+mqtt-bridge-kafka = { path = "src/mqtt-bridge/kafka" }
+mqtt-bridge-elasticsearch = { path = "src/mqtt-bridge/elasticsearch" }
+mqtt-bridge-redis = { path = "src/mqtt-bridge/redis" }
 mqtt-broker = { path = "src/mqtt-broker" }
 placement-center = { path = "src/placement-center" }
 clients = { path = "src/clients" }
