--- a/src/clients/Cargo.toml
+++ b/src/clients/Cargo.toml
@@ -10,7 +10,7 @@ bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
 protocol.workspace = true
-common.workspace =true
+common-base.workspace =true
 tonic.workspace = true
 lazy_static.workspace =true
 tokio.workspace = true
