--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -10,7 +10,7 @@ axum.workspace = true
 thiserror.workspace = true
 bytes.workspace = true
 protocol.workspace = true
-common.workspace = true
+common-base.workspace = true
 flume.workspace = true
 tokio-util.workspace = true
 futures.workspace =true
