--- a/config/broker-server.toml
+++ b/config/broker-server.toml
@@ -1,20 +1,28 @@
-addr = "127.0.0.1"
-grpc_port = 9987
+[inner.service]
+port = 9981
+
+[placement.center]
+addrs = ["127.0.0.1:1228"]
 
 [mqtt]
-mqtt4_port = 9989
-mqtt5_port = 9990
-websocket_port = 9991 
+mqtt4_enable = true
+mqtt5_enable = true
+websocket = true
+mqtt4_port = 1883
+mqtts4_port = 8883
+mqtt5_port = 1884
+mqtts5_port = 8884
+websocket_port = 8083
+websockets_port = 8084
 
-[broker]
-port = 1226
-work_thread = 3
+[prometheus]
+export_port = 8081
 
 [runtime]
 data_worker_threads = 8
 inner_worker_threads = 8
 
-[network]
+[tcp_server]
 accept_thread_num = 1
 handler_thread_num = 20
 response_thread_num = 2
@@ -22,11 +30,7 @@ max_connection_num = 1000
 request_queue_size = 2000
 response_queue_size = 2000
 
-[meta]
-port = 1228
-dataFold = "/data/robustmq/meta"
-
 [log]
 log_path = "/tmp/logs"
 log_segment_size = 1073741824
-log_file_num=50
+log_file_num = 50
