--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -13,6 +13,7 @@ protocol.workspace = true
 common-base.workspace = true
 flume.workspace = true
 tokio-util.workspace = true
-futures.workspace =true
+futures.workspace = true
 serde_json.workspace = true
 tonic.workspace = true
+dashmap.workspace = true
